@@ -1,3 +1,8 @@
+2006-07-26  Ville Vainio  <vivainio@gmail.com>
+
+	* iplib.py: history now stores multiline input as single 
+	history entries. Patch by Jorgen Cederlof.
+
 2006-07-18  Walter Doerwald  <walter@livinglogic.de>
 
 	* IPython/Extensions/ibrowse.py (ix): Make cursor visible over
